product_docs/docs/pem/7.16/pem_ent_feat/02_pem_query_tool.mdx
---
title: "The PEM Query Tool"
---

PEM contains a feature-rich Interactive Development Environment (IDE) that allows you to issue ad-hoc SQL queries against Postgres servers.

You can access the Query Tool via the `Query Tool` menu option on the `Tools` menu, or through the context menu of select nodes of the Browser tree control. The Query Tool allows you to:

-   Issue ad-hoc SQL queries.
-   Execute arbitrary SQL commands.
-   Edit the result set of a SELECT query if it is [updatable](../pem_online_help/08_toc_pem_developer_tools/02_query_tool/#updatable-result-set).
-   Displays current connection and transaction status as configured by the user.
-   Save the data displayed in the output panel to a CSV file.
-   Review the execution plan of a SQL statement in either a text, a graphical format or a table format (similar to <https://explain.depesz.com>).
-   View analytical information about a SQL statement.

![Query Tool tab](../images/query_tool.png)

You can open multiple copies of the Query tool in individual tabs simultaneously. To close a copy of the Query tool, click the *X* in the upper-right hand corner of the tab bar.

The Query Tool features two panels:

-   The upper panel displays the `SQL Editor`. You can use the panel to enter, edit, or execute a query. It also shows the `History` tab which can be used to view the queries that have been executed in the session, and a `Scratch Pad` which can be used to hold text snippets during editing. If the Scratch Pad is closed, it can be re-opened (or additional ones opened) by right-clicking in the SQL Editor and other panels and adding a new panel.
-   The lower panel displays the `Data Output` panel. The tabbed panel displays the result set returned by a query, information about a query's execution plan, server messages related to the query's execution and any asynchronous notifications received from the server.

**The Query Tool Toolbar**

The `Query Tool` toolbar uses context-sensitive icons that provide shortcuts to frequently performed tasks. If an icon is highlighted, the option is enabled; if the icon is grayed-out, the task is disabled.

![Query Tool Toolbar](../images/query_toolbar.png)

Hover over an icon to display a tool-tip that describes the icon's functionality:

| **Icon**            | **Behavior**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | **Shortcut**                                              |
| ------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------- |
| `Open File`         | Click the `Open File` icon to display a previously saved query in the SQL Editor.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | Accesskey + O                                             |
| `Save`              | Click the `Save` icon to perform a quick-save of a previously saved query, or to access the Save menu:<br/>- Select `Save` to save the selected content of the SQL Editor panel in a file.<br/>- Select Save As to open a new browser dialog and specify a new location to which to save the selected content of the SQL Editor panel.                                                                                                                                                                                                                                                                                                                                                                                              | Accesskey + S                                             |
| `Save Data Changes` | Click the `Save Data Changes` icon to save the data changes (insert, update, or delete) in the Data Output Panel to the server.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | F6                                                        |
| `Find`              | Use the `Find` menu to search, replace, or navigate the code displayed in the SQL Editor:<br/>- Select `Find` to provide a search target, and search the SQL Editor contents.<br/> - Select `Find next` to locate the next occurrence of the search target.<br/>- Select `Find previous` to move to the last occurrence of the search target.<br/>- Select `Pesistent find` to identify all occurrences of the search target within the editor.<br/>- Select `Replace` to locate and replace (with prompting) individual occurrences of the target.<br/>- Select `Replace all` to locate and replace all occurrences of the target within the editor.<br/>- Select `Jump` to navigate to the next occurrence of the search target.  | Cmd+F<br/>Cmd+G<br/>Cmd+Shift+G<br/>Cmd+Shift+F<br/>Alt+G |
| `Copy`              | Click the `Copy` icon to copy the content that is currently highlighted in the Data Output panel. when in View/Edit data mode.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | Accesskey + C                                             |
| `Paste`             | Click the `Paste` icon to paste a previously row into a new row when in View/Edit data mode.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Accesskey + P                                             |
| `Delete`            | Click the `Delete` icon to mark the selected rows for deletion. These marked rows get deleted when you click the `Save Data Changes` icon.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | Accesskey + D                                             |
| `Edit`              | Use options on the `Edit` menu to access text editing tools; the options operate on the text displayed in the SQL Editor panel when in Query Tool mode:<br/>- Select `Indent Selection` to indent the currently selected text.<br/> - Select `Unindent Selection` to remove indentation from the currently selected text.<br/>- Select `Inline Comment Selection` to enclose any lines that contain the selection in SQL style comment notation.<br/>- Select `Inline Uncomment Selection` to remove SQL style comment notation from the selected line.<br/>- Select `Block Comment` to enclose all lines that contain the selection in C style comment notation. This option acts as a toggle.                                     | Tab<br/>Shift+Tab<br/>Cmd+/<br/>Cmd+.<br/>Shift+Cmd+/     |
| `Filter`            | Click the `Filter` icon to set filtering and sorting criteria for the data when in View/Edit data mode. Click the down arrow to access other filtering and sorting options:<br/>-Click `Sort/Filter` to open the sorting and filtering dialogue.<br/> - Click `Filter by Selection` to show only the rows containing the values in the selected cells.<br/>- Click `Exclude by Selection` to show only the rows that do not contain the values in the selected cells.<br/>- Click `Remove Sort/Filter` to remove any previously selected sort or filtering options.                                                                                                                                                                 | Accesskey + F                                             |
| `Limit Selector`    | Select a value in the `Limit Selector` to limit the size of the dataset to a number of rows.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Accesskey + R                                             |
| `Stop`              | Click the `Stop` icon to cancel the execution of the currently running query.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | Accesskey + Q                                             |
| `Execute/Refresh`   | Click the `Execute/Refresh` icon to either execute or refresh the query highlighted in the SQL editor panel. Click the down arrow to access other execution options:<br/>- Add a check next to `Auto-Rollback` to instruct the server to automatically roll back a transaction if an error occurs during the transaction.<br/>- Add a check next to `Auto-Commit` to instruct the server to automatically commit each transaction. Any changes made by the transaction will be visible to others, and durable in the event of a crash.                                                                                                                                                                                              | F5                                                        |
| `Explain`           | Click the `Explain` icon to view an explanation plan for the current query. The result of EXPLAIN is displayed graphically on the `Explain` tab of the output panel, and in text form on the `Data Output` tab.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | F7                                                        |
| `Explain analyze`   | Click the `Explain analyze` icon to invoke an EXPLAIN ANALYZE command on the current query.Navigate through the Explain Options menu to select options for the EXPLAIN command:<br/>- Select `Verbose` to display additional information regarding the query plan.<br/> - Select `Costs` to include information on the estimated startup and total cost of each plan node, as well as the estimated number of rows and the estimated width of each row.<br/>- Select `Buffers` to include information on buffer usage.<br/>-  Select `Timing` to include information about the startup time and the amount of time spent in each node of the query.<br/>- Select `Summary` to include the summary information about the query plan. |                                                           |
| `Commit`            | Click the `Commit` icon to commit the transaction.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | Shift+CTRL+M                                              |
| `Rollback`          | Click the `Rollback` icon to rollback the transaction.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | Shift+CTRL+R                                              |
| `Clear`             | Use options on the `Clear` drop-down menu to erase display contents:<br/>- Select `Clear Query Window` to erase the content of the SQL Editor panel.<br/>- Select `Clear History` to erase the content of the `History` tab.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Accesskey + L                                             |
| `Download as CSV`   | Click the `Download as CSV` icon to download the result set of the current query to a comma-separated list. You can specify the CSV settings through `Preferences -> SQL Editor -> CSV output` dialogue.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | F8                                                        |
| `Macros`            | Click the `Macros` icon to manage the macros. You can create, edit or clear the `macros` through Manage Macros option.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |                                                           |

## The SQL Editor Panel

The `SQL editor` panel is a workspace where you can manually provide a query, copy a query from another source, or read a query from a file. The SQL editor features syntax coloring and auto-completion.

![Query Tool - Query Editor tab](../images/query_sql_editor.png)

To use auto-complete, begin typing your query; when you would like the Query editor to suggest object names or commands that might be next in your query, press the Control+Space key combination. For example, type `\*SELECT \* FROM\*` (with a trailing space), and then press the `Control+Space` key combination to select from a popup menu of auto-complete options.

![Query Tool - Query Editor tab](../images/query_autocomplete.png)

After entering a query, select the `Execute/Refresh` icon from the toolbar. The complete contents of the SQL editor panel will be sent to the database server for execution. To execute only a section of the code that is displayed in the SQL editor, highlight the text that you want the server to execute, and click the `Execute/Refresh` icon.

![Query Tool - Query Editor tab - Autocomplete feature](../images/query_execute_section.png)

The message returned by the server when a command executes is displayed on the `Messages` tab. If the command is successful, the `Messages` tab displays execution details.

![Query Tool - Query Editor - Message tab](../images/query_tool_message.png)

Options on the `Edit` menu offer functionality that helps with code formatting and commenting:

-   The auto-indent feature will automatically indent text to the same depth as the previous line when you press the Return key.
-   Block indent text by selecting two or more lines and pressing the Tab key.
-   Implement or remove SQL style or toggle C style comment notation within your code.

You can also `drag and drop` certain objects from the tree-view to save time spent typing long object names. Text containing the object name will be fully qualified with the schema name. Double quotes will be added if required. For functions and procedures, the function name along with parameter names will be pasted in the Query Tool.

## The Data Output Panel

The `Data Output` panel displays data and statistics generated by the most recently executed query.

![Query Tool - Data output tab](../images/query_output_data.png)

### Data Output Tab

The `Data Output` tab displays the result set of the query in a table format. You can:

-   Select and copy from the displayed result set.
-   Use the `Execute/Refresh` options to retrieve query execution information and set query execution options.
-   Use the `Download as CSV` icon to download the content of the `Data Output` tab as a comma-delimited file.
-   Edit the data in the result set of a `SELECT` query if it is updatable.

A result set is updatable if:

-   All columns are either selected directly from a single table, or they are not actually a table column (for example, the concatenation of two columns). Only columns that are selected directly from the table are editable, other columns are read-only.
-   All the primary key columns or OIDs of the table are selected in the result set.

Any columns that are renamed or selected more than once are also read-only.

!!! Note
    To work with an updatable query result set, you must have `psycopg2` driver version 2.8 or above installed.

Editable and read-only columns are identified using pencil and lock icons (respectively) in the column headers.

![Query Tool - Editable and Read-only columns](../images/query_tool_editable_columns.png)

An updatable result set is similar to the `Data Grid` in `View/Edit Data` mode, and can be modified in the same way.

If Auto-commit is `off`, data changes are made as part of the ongoing transaction; if no transaction is ongoing a new one is initiated. The data changes are not committed to the database unless the transaction is committed.

If any errors occur during saving (for example, trying to save a NULL into a column with a NOT NULL constraint) the data changes are rolled back to an automatically created SAVEPOINT to ensure any previously executed queries in the ongoing transaction are not rolled back.

All rowsets from previous queries or commands that are displayed in the `Data Output` panel will be discarded when you invoke another query; open another query tool browser tab to keep your previous results available.

### Explain Tab

To generate the `Explain` or `Explain Analyze` plan of a query, click on `Explain` or `Explain Analyze` button in the toolbar.

More options related to `Explain` and `Explain Analyze` can be selected from the drop down on the right side of `Explain Analyze` button in the toolbar.

![Query Tool - Toolbar Explain button](../images/query_toolbar_explain.png)

Please note that PEM generates the `Explain [Analyze]` plan in JSON format.

On successful generation of `Explain` plan, it will create three tabs/panels under the `Explain` panel.

### Graphical Tab

Hover over an icon on the `Graphical` tab to review information about that item; a popup window will display information about the selected object. For information on JIT statistics, triggers and a summary, hover over the icon on top-right corner; a similar popup window will be displayed when appropriate.

Please note that `EXPLAIN VERBOSE` cannot be displayed graphically.

Use the download button on top left corner of the `Explain` canvas to download the plan as an SVG file. Please note that `Download as SVG` feature is not supported on Internet Explorer.

![Query Tool - Explain tab - Graphical plan tab](../images/query_output_explain_details.png)

The query plan that accompanies the `Explain analyze` is available on the `Data Output` tab.

### Analysis Tab

The `Analysis` tab shows the plan details in table format, it generates a format similar to the format available at `explain.depsez.com`. Each row of the table represents the data for a `Explain Plan Node`. The output may contain the node information, exclusive timing, inclusive timing, actual vs. planned rows, actual rows, planned rows, or loops. When you select a row, the child rows of that selected row are marked with an orange dot.

If the percentage of the exclusive/inclusive timings of the total query time is:

Greater than 90 --> Red

Greater than 50 --> Orange (between red and yellow)

Greater than 10 --> Yellow

If the planner has misestimated the number of rows (actual vs planned) by:

10 times --> Yellow color

100 times --> Orange (between Red and Yellow) color

1000 times --> Red color

![Query Tool - Explain tab - Analysis tab](../images/query_explain_analyze_table.png)

### Statistics Tab

The `Statistics` tab displays information in two tables:

-   `Statistics per Node Type` tells you how many times each node type was referenced.
-   `Statistics per Table` tells you how many times each table was referenced by the query.

![Query Tool - Explain plan tab - Statistics tab](../images/query_explain_analyze_statistics.png)

### Messages Tab

Use the `Messages` tab to view information about the most recently executed query:

![Query Tool - Output error](../images/query_output_error.png)

If the server returns an error, the error message will be displayed on the `Messages` tab, and the syntax that caused the error will be underlined in the SQL editor. If a query succeeds, the `Messages` tab displays how long the query took to complete and how many rows were retrieved:

![Query Tool - Messages tab](../images/query_output_messages.png)

### Notifications Tab

Use the `Notifications` tab to view details of the asynchronous notifications that a client process may have sent:

![Query Tool - Output Notifications tab](../images/query_output_notifications.png)

You can see details such as recorded time of the asynchronous notification event, name of the event or channel, process ID of the client process that has sent the notification, and the payload string that might have been sent along with the notification.

## Query History Panel

Use the `Query History` tab to review activity for the current session:

![Query Tool - Query History tab](../images/query_output_history.png)

The `Query History` tab displays information about recent commands:

-   The date and time that a query was invoked.
-   The text of the query.
-   The number of rows returned by the query.
-   The amount of time it took the server to process the query and return a result set.
-   Messages returned by the server (not noted on the `Messages` tab).
-   The source of the query (indicated by icons corresponding to the toolbar).

You can show or hide the queries generated internally by pgAdmin (during `View/Edit Data` or `Save Data` operations).

To erase the content of the `Query History` tab, select `Clear history` from the `Clear` drop-down menu.

Query history is maintained across sessions for each database on a per-user basis when running in `Query Tool` mode. In `View/Edit Data` mode, history is not retained. By default, the last 20 queries are stored for each database. This can be adjusted in `config_local.py` by overriding the `MAX_QUERY_HIST_STORED` value.

## Connection Status

Use the `Connection status` feature to view the current connection and transaction status by clicking on the status icon in query tool:

![Query Tool - Connection Status button](../images/query_tool_connection_status.png)

## Macros

Query Tool Macros enable you to execute pre-defined SQL queries with a single key press. Pre-defined queries can contain the placeholder $SELECTION$. Upon macro execution, the placeholder will be replaced with the currently selected text in the Query Editor pane of the Query Tool.

![Query Tool - Connection Status button](../images/query_tool_manage_macros.png)

To create a macro, select the *Manage Macros* option from the *Macros* menu on the *Query Tool*. Select the key you wish to use, enter the name of the macro, and the query, optionally including the selection placeholder, and then click the *Save* button to store the macro.

![Query Tool - Connection Status button](../images/query_tool_manage_macros_dialog.png)

To clear a macro, select the macro on the *Manage Macros* dialogue, and then click the *Clear* button.

![Query Tool - Connection Status button](../images/query_tool_macros_clear_row.png)

The server will prompt you for confirmation to clear the macro.

![Query Tool - Connection Status button](../images/query_tool_macros_clear_confirmation.png)

To clear all macros, click on the *Clear* button on left side of the key. The server will prompt you for confirmation to clear all the rows.

![Query Tool - Connection Status button](../images/query_tool_macros_clear_all.png)

To execute a macro, simply select the appropriate shortcut keys, or select it from the *Macros* menu.

![Query Tool - Connection Status button](../images/query_tool_macros_execution.png)
